--- a/Src/Nancy.ViewEngines.Veil/Nancy.ViewEngines.Veil.nuspec
+++ b/Src/Nancy.ViewEngines.Veil/Nancy.ViewEngines.Veil.nuspec
@@ -17,7 +17,7 @@
     </dependencies>    
   </metadata>
   <files>
-    <file src="lib\net40\Nancy.ViewEngines.Veil.dll" target="lib\net40" />
-    <file src="lib\net40\Nancy.ViewEngines.Veil.pdb" target="lib\net40" />
+    <file src="bin\Release\Nancy.ViewEngines.Veil.dll" target="lib\net40" />
+    <file src="bin\Release\Nancy.ViewEngines.Veil.pdb" target="lib\net40" />
   </files>  
 </package>
