--- a/Src/Veil.SuperSimple/Veil.SuperSimple.csproj
+++ b/Src/Veil.SuperSimple/Veil.SuperSimple.csproj
@@ -36,6 +36,8 @@
     <Optimize>false</Optimize>
     <OutputPath>lib\net40</OutputPath>
     <WarningLevel>4</WarningLevel>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>pdbonly</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
