--- a/Src/Veil/Veil.csproj
+++ b/Src/Veil/Veil.csproj
@@ -39,6 +39,7 @@
     <WarningLevel>4</WarningLevel>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>pdbonly</DebugType>
+    <DocumentationFile>lib\net40\Veil.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
